--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Shoes</a>
@@ -38,6 +38,54 @@
               </div>
             </div>
           </nav>
+    </div>
+    <div class="container">
+      <div id="carouselExampleControls" class="carousel slide pink-bg" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>Awesome Headphone</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam odit sit eveniet dolores odio inventore temporibus id consequatur eum earum.</p>
+                <h1 class="price">$200</h1>
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+              <div class="col-md-5"><img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>Luxury Television</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam odit sit eveniet dolores odio inventore temporibus id consequatur eum earum.</p>
+                <h1 class="price">$2000</h1>
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+              <div class="col-md-5"><img src="images/banner-images/tv.png" class="d-block w-100" alt="..."></div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>Rocking X-BOX</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam odit sit eveniet dolores odio inventore temporibus id consequatur eum earum.</p>
+                <h1 class="price">$900</h1>
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+              <div class="col-md-5"><img src="images/banner-images/xbox.png" class="d-block w-100" alt="..."></div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
     
 
