--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
         </button>
       </div>
     </div>
-    
+    <div class="container">
+      <div class="row">
+        <div class="container"></div>
+      </div>
+    </div>
 
 
 
