--- a/index.html
+++ b/index.html
@@ -87,9 +87,28 @@
         </button>
       </div>
     </div>
-    <div class="container">
+    <div class="container catagory">
       <div class="row">
-        <div class="container"></div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat1">
+            <h1>Watch</h1>
+          <img src="images/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat2">
+            <h1>Shoes</h1>
+          <img src="images/categories/shoes.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat3">
+            <h1>Bags</h1>
+          <img src="images/categories/bag.png" alt="">
+          </div>
+        </div>
+        
+        </div>
       </div>
     </div>
 
