--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <a class="nav-link" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#bags">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact US</a>
+                    <a class="nav-link" href="#contact-us">Contact US</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -107,12 +107,97 @@
           <img src="images/categories/bag.png" alt="">
           </div>
         </div>
-        
+        </div>
+      </div>
+    </div>
+    <div class="container shoes" id="shoes">
+      <h3>Shoes</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">SPLY-350</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$300</h5>
+                <button class="buy-now-button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$250</h5>
+                <button class="buy-now-button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">AIR<b>MAX</b></h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$200</h5>
+                <button class="buy-now-button">Buy Now</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-
+    <div class="container bags" id="bags">
+      <h3>Bags</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">OGIO</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$500</h5>
+                <button class="buy-now-button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">BURTON</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$500</h5>
+                <button class="buy-now-button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">BLACK LETH</b></h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$700</h5>
+                <button class="buy-now-button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<div class="container d-flex justify-content-center align-items-center pink-bg" id="contact-us">
+  <div>
+    <h3>Let's Stay IN Touch</h3>
+    <h6>Get updates on sales, specials and more</h6>
+    <input class="form-control" type="text">
+    <button class="buy-now-button">Submit</button>
+  </div>
+</div>
+<footer>
+  <small>Ⓒ2021 BDCommerece. All right reserved. Keraniganj, Dhaka</small>
+</footer>
 
 
 
